[package]
name = "MVTree"
version = "0.0.97"
edition = "2021"
authors = ["Amir Tonta <amir.tonta@mathematik.uni-marburg.de>"]
description = "MV-Tree Research Implementation"
repository = "https://github.com/umr-dbs/MVTree"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
#debug = true
#panic = "unwind"

[build]
rustflags = ["-C", "target-cpu=native"]

[features]
hardware-lock-elision = []

[lib]
name = "mvtree"
path = "src/lib.rs"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
CCBPlusTree = { git = "ssh://git@github.com/umr-dbs/CC-BPlusTree.git", version = "0.0.121" }
crossbeam-channel = "0.5.15"
crossbeam-skiplist = "0.1.3"
threadpool = "1.8.1"
chrono = "0.4.42"
rand_distr = "0.5.1"
rand = "0.9.2"
itertools = "0.14.0"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision", "arc_lock"] }
serde_json = "1.0.148"
serde = "1.0.228"
arc-swap = "1.8.0"
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.179"
num_cpus = "1.17"