[package]
name = "cMVBT"
version = "0.0.105"
edition = "2021"
authors = ["Amir Tonta <amir.tonta@mathematik.uni-marburg.de>"]
description = "cMVBT Research Implementation"
repository = "https://github.com/umr-dbs/cMBVT"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
#debug = true
#panic = "unwind"

[build]
rustflags = ["-C", "target-cpu=native"]

[features]
hardware-lock-elision = []

[lib]
name = "cmvbt"
path = "src/lib.rs"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
CCBPlusTree = { git = "ssh://git@github.com/umr-dbs/CC-BPlusTree.git", version = "0.0.121" }
crossbeam-channel = "0.5.15"
crossbeam-skiplist = "0.1.3"
threadpool = "1.8.1"
chrono = "0.4.42"
rand_distr = "0.6.0"
rand = "0.10.1"
itertools = "0.14.0"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision", "arc_lock"] }
serde_json = "1.0.149"
serde = "1.0.228"
arc-swap = "1.9.1"
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"
num_cpus = "1.17"
#jemallocator = "0.5.4"