[package]
name = "cMVBT"
version = "0.0.108"
edition = "2021"
authors = ["Amir Tonta <amir.tonta@mathematik.uni-marburg.de>"]
description = "cMVBT Research Implementation"
repository = "https://github.com/umr-dbs/cMVBT"

[profile.dev]
overflow-checks = false

[profile.release]
debug = "line-tables-only"
overflow-checks = false
#opt-level = 3            # maximum LLVM optimizations
#lto = "fat"              # full link-time optimization (cross-crate)
#codegen-units = 1        # better optimization, slower compile
#panic = "abort"          # removes unwinding overhead
#strip = true             # smaller binary (optional)
#debug = 0                # no debug info
#incremental = false      # better optimization consistency

[build]
rustflags = ["-C", "target-cpu=native"]

[features]
hardware-lock-elision = []

[lib]
name = "cmvbt"
path = "src/lib.rs"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
CCBPlusTree = { git = "https://github.com/umr-dbs/CC-BPlusTree.git", version = "0.0.121" }
crossbeam-channel = "0.5.15"
crossbeam-skiplist = "0.1.3"
threadpool = "1.8.1"
chrono = "0.4.44"
rand_distr = "0.6.0"
rand = "0.10.1"
itertools = "0.15.0"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision", "arc_lock"] }
arc-swap = "1.9.1"
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"
num_cpus = "1.17"
jemallocator = "0.5.4"